# Commonlib-NG-Template

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: PCH.h  Plugin.cpp
